CSS reset for buttons on Firefox Mobile, fixes #130

--- a/css/noflo-ui.css
+++ b/css/noflo-ui.css
@@ -17,6 +17,7 @@ body {
 button {
   padding:0;
   cursor: pointer;
+  background-image: none;
 }
 
 input:focus, select:focus, textarea:focus, button:focus, h1, h2, h3, div, a, p, div {
